# docs/swagger.json
@@ -34,6 +34,22 @@
                 }
             }
         },
+        "/user/list": {
+            "get": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "获取用户列表",
+                "responses": {
+                    "200": {
+                        "description": "code\", \"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/{userId}": {
             "delete": {
                 "tags": [
@@ -75,6 +91,9 @@
                 },
                 "heartbeatTime": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "identity": {
                     "type": "string"
