# service/user.go
@@ -3,6 +3,7 @@ package service
 import (
 	"fmt"
 	"go-chat/models"
+	"strconv"
 	"time"
 
 	"github.com/gin-gonic/gin"
@@ -12,7 +13,7 @@ import (
 // @Summary 新增用户
 // @Tags 用户模块
 // @Accept application/json
-// @Param data body models.UserBasic true "data"
+// @Param userData body models.UserBasic true "userData"
 // @Success 200 {string} json"{"code": 200,"message": "新增成功"}"
 // @Router /user [post]
 func CreateUser(c *gin.Context) {
@@ -64,5 +65,31 @@ func CreateUser(c *gin.Context) {
 // @Success 200 {string} json{"code", "message"}
 // @Router /user/{userId} [delete]
 func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		return
+	}
+	user.ID = uint(id)
+	models.DeleteUser(user)
+	c.JSON(200, gin.H{
+		"code":    0, //  0成功   -1失败
+		"message": "删除用户成功！",
+		"data":    user,
+	})
+}
 
+// GetUserList
+// @Summary 获取用户列表
+// @Tags 用户模块
+// @Success 200 {string} json{"code", "message"}
+// @Router /user/list [get]
+func GetUserList(c *gin.Context) {
+	list := make([]*models.UserBasic, 10)
+	list = models.GetUserList()
+	c.JSON(200, gin.H{
+		"code":    0,
+		"message": "获取用户列表",
+		"data":    list,
+	})
 }
